--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -65,9 +65,7 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           echo HOST=${{ secrets.HOST }} >> .env
-          sudo docker-compose up -d && \
-          sudo docker-compose exec web python manage.py collectstatic --no-input $$ \
-          sudo docker-compose exec web python manage.py migrate
+          sudo docker-compose up -d
 
   send_message:
     name: Send message
