--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
 
   # Web application container
   web:
-    image: evgeny81d/api_yamdb:study
+    image: evgeny81d/api_yamdb:latest
     restart: always
     volumes:
       - static:/app/static/
@@ -30,8 +30,8 @@ services:
       # Bind mount nginx config file
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       # Bind static and media volumes (shared with web application)
-      - static:/var/html/static/
-      - media:/var/html/media/
+      - static:/app/static/
+      - media:/app/media/
     depends_on:
       - web
 
