--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -8,12 +8,12 @@ server {
     
     # Static files directory
     location /static/ {
-        root /var/html/;
+        root /app/;
     }
     
     # Media files directory
     location /media/ {
-        root /var/html/;
+        root /app/;
     }
     
     # Django web application
