--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: api_yamdb workflow
+name: CI/CD yamdb_final
 
 on: push
 
@@ -64,6 +64,8 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo HOST=${{ secrets.HOST }} >> .env
+          echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
           sudo docker-compose up -d
 
   send_message:
